--- a/src/projects/bringing-it-all-together.mdx
+++ b/src/projects/bringing-it-all-together.mdx
@@ -46,7 +46,7 @@ Did I spend too long building, and not enough time writing? Probably. Did I lear
 ## Moving Forward
 
 ### This Website
-I will likely drop some of the reflective components that have been included in the portfolio. While I recognize their value in my own learning and growth, they don't have as much of a place in this website as I adapt it to showcase future work. Luckily, to do so, I just have to  `/* comment out */` a few lines of code! 
+I will likely drop some of the reflective components that have been included in the portfolio. While I recognize their value in my own learning and growth, they don't have as much of a place in this website as I adapt it to showcase future work. Luckily, to do so, I just have to  `/* comment out */` a few lines of code! I would like to incorporate some of the GitHub projects that I have developed directly in the website, and have seen some examples of how to do this. Finally, I would like to implement dynamic tagging of certain key words - with the ultimate goal of using these as filters or tools to rearrange my project display. 
 
 ### Professionally
 
@@ -60,7 +60,7 @@ I will have spent just about half of my time in the MET program in a global pand
     <img src={career} alt="My Career Diagram"/>
 </div>
 
-I often joke that the MET program is a degree I should have had for my current role, and that I have come to my career a bit backwards. I still believe this is true. I have been able to integrate what I have learned throughout the program in my career, and in some cases have developed projects that I can use almost immediately in my role. While I initially thought I was more interested on the "people" side to the right of my diagram, the development of this portfolio has made me reconsider where to focus my attention in the future. Ultimately, I would like to see Learning Analytics evolve at UBC - for this, I think it is the institution and software where the biggest impact can be made. 
+I often joke that the MET program is a degree I should have had for my current role, and that I have come to my career a bit backwards. I still believe this is true. I have been able to integrate what I have learned throughout the program in my career, and in some cases have developed projects that I can use almost immediately in my role. While I initially thought I was more interested on the "people" side to the right of my diagram, the development of this portfolio has made me reconsider where to focus my attention in the future. I can see where Learning Analytics fits in the educational technology space more clearly. Ultimately, I would like to see Learning Analytics evolve at UBC - for this, I think it is the institution and software where the biggest impact can be made. 
 
 
 
