--- a/src/projects/bringing-it-all-together.mdx
+++ b/src/projects/bringing-it-all-together.mdx
@@ -26,7 +26,7 @@ Originally, this goal was focused on learning theories specifically. However, th
     </ul>
 </blockquote>
 
-<div class="grid grid-cols-2 flex items-center pb-4">
+<div class="grid grid-cols-2 flex pb-4">
     <div>
         Through discussions with peers I also recognized the need to be able to critically analyze the ever-growing bodies of information that are associated with educational technologies. I found throughout the MET program that the quick Google searches for information often landed me on a personal or professional blogs. While these blogs can be valuable - they can also be difficult to track back to primary sources, or they become primary information. For example, in a comment from Tony Bates on his blog post (?) article (?) from 2014 <a href='https://www.tonybates.ca/2014/12/10/a-short-history-of-educational-technology/' target='blank'><em>A short history of educational technology</em></a> he asks the audience where they are from, and many respond that it was assigned reading up to the time of writing this in 2021. 
     </div>
