--- a/src/projects/bringing-it-all-together.mdx
+++ b/src/projects/bringing-it-all-together.mdx
@@ -50,13 +50,12 @@ I will likely drop some of the reflective components that have been included in 
 
 ### Professionally
 
-
-<blockquote width='25%' class='self'>I find myself in the right place at the right time.<p class="text-left py-10"><em>-Me, now</em></p></blockquote> 
+<blockquote width='25%' class='self'>I find myself in the right place at the right time...<p class="text-left py-10"><em>-Me, now</em></p></blockquote> 
 
 
 I will have spent just about half of my time in the MET program in a global pandemic that saw educational institutions catapulted into "catching up" with regards to online education mediums and technology. I have a much more nuanced understanding of the history of educational technology and of the learning theories of the field. I have also expanded my scope of consideration beyond a single classroom and to the level of an institution. I took advantage of opportunities to widen my technology skills, and have now picked up a programming language that has eluded me until now (this website was written using React which is a javascript library). 
 
-<div style={{ minWidth: 250, maxWidth: 500, float: "left"}}>
+<div style={{minWidth: 250, maxWidth: 500, float: "left"}}>
     <img src={career} alt="My Career Diagram"/>
 </div>
 
