create page draft

--- a/src/summary/summary.mdx
+++ b/src/summary/summary.mdx
@@ -2,4 +2,26 @@
 title: "Project Overview"
 ---
 
-Content goes here
+# Reviewing LOCR
+
+To beging our usability review we conducted an analysis of the features and issues we found with LOCR. You can review the issues we found in the following walkthrough.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lDstdlboa-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# Proposal
+
+<iframe width="1200" height="800" src="https://docs.google.com/document/d/e/2PACX-1vRkZLnuve6NPW_y_6WkPNmVpSi9TQGm0g-CGi6p8U2V508RJcEePqp5B9GtCZ70yuZqBCPddhEuo4jf/pub?embedded=true"></iframe>
+
+# Brainstorm of Improvements and New Features
+
+We brainstormed all of the improvements and new features, and then discussed and commented what woudl be feasible.
+<iframe width="1200" height="800" src="https://docs.google.com/document/d/e/2PACX-1vQefXAGGtKy-Jh3vrOF_eNUK6ZMGIYuVJvjdAVUdMz6Obp3bscW2kwKeqrzQeEItMTo74Vu5TwghIt-/pub?embedded=true"></iframe>
+
+
+# User Testing
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/08hRStlxKbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# Review and Analysis
+
+We conducted a thorough review of literature to inform our project and guide the design of the Resource Management Tool.
+<iframe width="1200" height="800" src="https://docs.google.com/document/d/e/2PACX-1vRxCqBJPl1asTWQf-vQIReVdJ7cZjoYfuTOb2161VQIJibyK4icWnvi8MUAySPUGu8dI5BHzvMeNgPI/pub?embedded=true"></iframe>
