--- a/src/summary/summary.mdx
+++ b/src/summary/summary.mdx
@@ -15,7 +15,7 @@ The intention of our project is twofold; the first objective is to evaluate the 
 # Reviewing LOCR
 
 To begin our usability review we conducted an analysis of the features and issues we found with LOCR. You can review the issues we found in the following walkthrough.
-<iframe width="560" height="315" src="https://www.youtube.com/embed/lDstdlboa-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe className="center-this" width="800" height="500"  src="https://www.youtube.com/embed/lDstdlboa-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 # Conclusions From a Usability Evaluation of LOCR
@@ -49,7 +49,7 @@ Once our prototype was developed, we invited two colleagues to test our platform
 
 In terms of suggestions from the evaluators, they indicated it could be beneficial if the individual grid resource boxes were smaller in size. This way, the user would be able to see more of the resources on the page at a glance. Similar to how the grid view presents a description of the resource, the evaluators would like to have that function available within the list view as well. Additionally, they mentioned being able to sort the resource by media type would also be an asset to the tool.
 
-<iframe width="800" height="500" src="https://www.youtube.com/embed/08hRStlxKbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe className="center-this" width="800" height="500" src="https://www.youtube.com/embed/08hRStlxKbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 # Moving Forward
 
