--- a/src/summary/summary.mdx
+++ b/src/summary/summary.mdx
@@ -37,9 +37,9 @@ As graduate students, we are continuously searching for similarly related articl
 
 To address the above noted usability inefficiencies, our group decided to move forward and develop our own Resource Management Tool. To reduce the issue of being redirected and bounced to various web browsers within LOCR after selecting a resource, our group’s Resource Management Tool has designed an interface that links directly to the resource within one click. This approach supports the user's attention to the task, reduces frustration and enhances time efficiency. The instructor will also benefit from this interface by being able to readily identify broken resource links. 
 
-In terms of clearly defining the type of format the resource is presented in, we have incorporated intuitive symbols that represent the resource medium. Clear image icons will help users immediately identify what type of resources they are accessing. Further, we have added alternative text that clearly indicates the type, for example, “This is a video” or “This is an ebook chapter”. That said, the future of our Resource Management Tool will include multimodal resources. 
+In terms of clearly defining the type of format the resource is presented in, we have incorporated intuitive symbols that represent the resource medium. Clear image icons will help users immediately identify what type of resources they are accessing. Further, we have added alternative text that clearly indicates the type, for example, “This is a video” or “This is an ebook chapter”. That said, the future of our Resource Management Tool will include multimodal resources. We have also identified in our grid and list views which resources contain a Creative Commons license. This acts as a visual cue to the student that the resource should be easily accessible, and gives them a sense of how they can re-use materials based on the CC license. In addition, this should act as a cue to the course instructor how many resources come from a more open or flexible source.
 
-In terms of accessibility and ability to organize items in a way that suits students' learning, we have provided two options for sorting the reading list: grid and list.  As Ambrose, et al note in How learning works: Seven research-based principles for smart teaching (2010) students perform 60 to 305 percent better when they are able to organize their learning items into their own personal hierarchy. 
+In terms of accessibility and ability to organize items in a way that suits students' learning, we have provided two options for sorting the reading list: grid and list.  As Ambrose, et al note in How learning works: Seven research-based principles for smart teaching (2010) students perform 60 to 305 percent better when they are able to organize their learning items into their own personal hierarchy. In addition, we have included multiple search options that allow the user to search by the resource title, author and/or tags. 
 
 To address the concern in terms of accessing similarly related resources, we hope that future iterations of our Resource Management Tool will utilize machine learning to suggest similar readings. The algorithm will use specific keywords, dates and authors to suggest similar readings to the reading provided to allow users to broaden their knowledge base. We have also included appropriate tags to each of the resources that will direct the user to similar resources with the same tag. 
 
@@ -58,8 +58,10 @@ A consideration we are aware of relates to issues of copyright and resource owne
 
 ## Future Development
 If our group had the opportunity to develop the Resource Management Tool further, there are additional enhancements we would incorporate, such as a citation support generator. When referring to literature within academic work, the task of referencing the source requires several steps in order to accurately cite in the required format (APA 7, MLA). Students often utilize external website tools that can temporarily save the citations, list how they should be formatted, and provide the corresponding in-text citation. This approach involves the user to click away from the LOCR site to another browser or tool. In our system, we want to embed an application that cites a resource directly from the reading list and saves it directly within the Resource Management Tool. 
+
 Another feature we would like to explore pertains to the interface of the tool when reviewed on various mediums. We know that many user’s access their online course resources on devices such as their smartphone, tablet, laptop, etc. and we recognize how usability can be impacted if a tool is not designed for alternative forms of technology outside of a PC. 
-Additionally, we would like to explore ways in which we can design our interface based on Universal Design Learning concepts. By designing the interface with the perspective of the “curb cut effect” we can ensure the tool is accessible to diverse users with varying needs and preferences. 
+A
+dditionally, we would like to explore ways in which we can design our interface based on Universal Design Learning concepts. By designing the interface with the perspective of the “curb cut effect” we can ensure the tool is accessible to diverse users with varying needs and preferences. 
 
 
 
@@ -88,6 +90,7 @@ Lieu, A., & Zhao, D. (2019). How much of library digital content is checked out 
 The “Curb cut” effect: An accessible web benefits all – Introduction to web accessibility. (2019, August 1). 
  	Ryerson University Pressbooks – Open Educational Resources Publishing. 
  	The “Curb Cut” Effect: An Accessible Web Benefits All
+
 Wolbring, G. (2008). The politics of ableism. Development, 51(2), 252-258. 
  	The Politics of Ableism | SpringerLink
 
