--- a/src/summary/summary.mdx
+++ b/src/summary/summary.mdx
@@ -60,8 +60,8 @@ A consideration we are aware of relates to issues of copyright and resource owne
 If our group had the opportunity to develop the Resource Management Tool further, there are additional enhancements we would incorporate, such as a citation support generator. When referring to literature within academic work, the task of referencing the source requires several steps in order to accurately cite in the required format (APA 7, MLA). Students often utilize external website tools that can temporarily save the citations, list how they should be formatted, and provide the corresponding in-text citation. This approach involves the user to click away from the LOCR site to another browser or tool. In our system, we want to embed an application that cites a resource directly from the reading list and saves it directly within the Resource Management Tool. 
 
 Another feature we would like to explore pertains to the interface of the tool when reviewed on various mediums. We know that many user’s access their online course resources on devices such as their smartphone, tablet, laptop, etc. and we recognize how usability can be impacted if a tool is not designed for alternative forms of technology outside of a PC. 
-A
-dditionally, we would like to explore ways in which we can design our interface based on Universal Design Learning concepts. By designing the interface with the perspective of the “curb cut effect” we can ensure the tool is accessible to diverse users with varying needs and preferences. 
+
+Additionally, we would like to explore ways in which we can design our interface based on Universal Design Learning concepts. By designing the interface with the perspective of the “curb cut effect” we can ensure the tool is accessible to diverse users with varying needs and preferences. 
 
 
 
